--- a/cms/.env.example
+++ b/cms/.env.example
@@ -1,17 +1,17 @@
-DB_NAME='database_name'
-DB_USER='database_user'
-DB_PASSWORD='database_password'
+DB_NAME='cms'
+DB_USER='user'
+DB_PASSWORD='password'
 
 # Optionally, you can use a data source name (DSN)
 # When using a DSN, you can remove the DB_NAME, DB_USER, DB_PASSWORD, and DB_HOST variables
 # DATABASE_URL='mysql://database_user:database_password@database_host:database_port/database_name'
 
 # Optional database variables
-# DB_HOST='localhost'
+DB_HOST='db'
 # DB_PREFIX='wp_'
 
-WP_ENV='development'
-WP_HOME='http://example.com'
+# WP_ENV='development'
+WP_HOME='http://localhost:8080'
 WP_SITEURL="${WP_HOME}/wp"
 
 # Specify optional debug.log path
@@ -26,3 +26,14 @@ AUTH_SALT='generateme'
 SECURE_AUTH_SALT='generateme'
 LOGGED_IN_SALT='generateme'
 NONCE_SALT='generateme'
+
+# Development DB Credentials
+MYSQL_DATABASE="${DB_NAME}"
+MYSQL_USER="${DB_USER}"
+MYSQL_PASSWORD="${DB_PASSWORD}"
+
+# Development PHPMyAdmin Credentials
+# PMA_ARBITRARY="1"
+PMA_USER="${DB_USER}"
+PMA_PASSWORD="${DB_PASSWORD}"
+PMA_HOST="${DB_HOST}"
