--- a/cms/composer.json
+++ b/cms/composer.json
@@ -40,6 +40,7 @@
     "roots/wordpress": "6.7",
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.2.0",
+    "wpackagist-plugin/wordpress-importer": "0.8.3",
     "wpackagist-plugin/wp-graphql": "1.29.2"
   },
   "require-dev": {
