rewrite posts content collection logic

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
       context: ./web
     depends_on:
       - cms
+    environment:
+      GRAPHQL_ENDPOINT: http://cms/wp/graphql
     ports:
       - 4321:4321
 
