--- a/web/package.json
+++ b/web/package.json
@@ -13,21 +13,21 @@
   },
   "dependencies": {
     "@astrojs/node": "9.0.0-beta.3",
-    "astro": "5.0.0-beta.8",
-    "express": "^4.21.1",
-    "morgan": "^1.10.0"
+    "astro": "5.0.0-beta.10",
+    "express": "4.21.1",
+    "morgan": "1.10.0"
   },
   "devDependencies": {
     "@astrojs/check": "0.9.4",
     "@graphql-codegen/cli": "5.0.3",
     "@graphql-codegen/typescript": "4.1.1",
-    "@types/bun": "^1.1.13",
-    "@types/express": "^5.0.0",
-    "@types/morgan": "^1.9.9",
-    "graphql": "^16.9.0",
-    "prettier": "^3.3.3",
-    "prettier-config-standard": "^7.0.0",
-    "prettier-plugin-astro": "^0.14.1",
-    "typescript": "^5.6.3"
+    "@types/bun": "1.1.13",
+    "@types/express": "5.0.0",
+    "@types/morgan": "1.9.9",
+    "graphql": "16.9.0",
+    "prettier": "3.3.3",
+    "prettier-config-standard": "7.0.0",
+    "prettier-plugin-astro": "0.14.1",
+    "typescript": "5.6.3"
   }
 }
