--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,7 +64,7 @@ jobs:
           DB_NAME: ${{ secrets.MYSQL_DATABASE }}
           DB_USER: ${{ secrets.MYSQL_USER }}
           DB_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-          DB_HOST: 
+          DB_HOST: db
           AUTH_KEY: ${{ secrets.AUTH_KEY }}
           SECURE_AUTH_KEY: ${{ secrets.SECURE_AUTH_KEY }}
           LOGGED_IN_KEY: ${{ secrets.LOGGED_IN_KEY }}
