[skip ci] update devcontainer image to use debian base

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,7 +4,7 @@
 // See https://aka.ms/devcontainer.json for more information.
 {
 	"name": "News Template",
-	"image": "mcr.microsoft.com/devcontainers/base:bullseye",	
+	"image": "mcr.microsoft.com/devcontainers/base:debian",	
 	// Features add additional features to your environment. See https://containers.dev/features
 	// Beware: features are not supported on all platforms and may have unintended side-effects.
 	"features": {
