--- a/.github/workflows/content.yml
+++ b/.github/workflows/content.yml
@@ -40,9 +40,6 @@ jobs:
       packages: write
       attestations: write
       id-token: write
-    defaults:
-      run:
-        working-directory: content
     env:
       DOCKER_BUILDKIT: 1
       BUNDLE_WITHOUT: 'default development test production profiling'
@@ -56,7 +53,13 @@ jobs:
       - uses: docker/setup-buildx-action@v3
       - uses: crazy-max/ghaction-github-runtime@v3
       - run: |
-          echo "DB_HOST=content-db" > .env
+          mkdir -p ~/.ssh && echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
+          eval $(ssh-agent -s) && ssh-add ~/.ssh/id_rsa
+          ssh-keyscan $SERVER_ADDR >> ~/.ssh/known_hosts
+        env:
+          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      - run: |
+          echo "DB_HOST=content-db" >> .env
           echo "DB_NAME=${MYSQL_DATABASE}" >> .env
           echo "DB_USER=${MYSQL_USER}" >> .env
           echo "DB_PASSWORD=${MYSQL_PASSWORD}" >> .env
@@ -83,18 +86,16 @@ jobs:
           SECURE_AUTH_SALT: ${{ secrets.SECURE_AUTH_SALT }}
           LOGGED_IN_SALT: ${{ secrets.LOGGED_IN_SALT }}
           NONCE_SALT: ${{ secrets.NONCE_SALT }}
-      - run: |
-          mkdir -p ~/.ssh && echo "$SSH_PRIVATE_KEY" > ~/.ssh/id_rsa && chmod 600 ~/.ssh/id_rsa
-          eval $(ssh-agent -s) && ssh-add ~/.ssh/id_rsa
-          ssh-keyscan $SERVER_ADDR >> ~/.ssh/known_hosts
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+        working-directory: content
       - run: bin/kamal deploy --quiet --config-file=.kamal/config/deploy.yml
         env:
           KAMAL_REGISTRY_USERNAME: ${{ github.actor }}
           KAMAL_REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
         if: ${{ (github.event.inputs.service == 'content' && github.event.inputs.action == 'boot') || github.event_name == 'pull_request' }}
+        working-directory: content
       - run: bin/kamal accessory boot db --quiet --config-file=.kamal/config/deploy.yml
         if: ${{ (github.event.inputs.service == 'db' && github.event.inputs.action == 'boot') }}
+        working-directory: content
       - run: bin/kamal accessory boot phpmyadmin --quiet --config-file=.kamal/config/deploy.yml
         if: ${{ (github.event.inputs.service == 'phpmyadmin' && github.event.inputs.action == 'boot') }}
+        working-directory: content
