--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,19 +9,15 @@
 	// Beware: features are not supported on all platforms and may have unintended side-effects.
 	"features": {
 		"ghcr.io/devcontainers/features/docker-in-docker:2": {},
-		"ghcr.io/devcontainers/features/ruby:1": {},
 		"ghcr.io/shyim/devcontainers-features/php:0": {},
-		"ghcr.io/shyim/devcontainers-features/bun:0": {},
-		"ghcr.io/devcontainers/features/github-cli:1": {}
+		"ghcr.io/shyim/devcontainers-features/bun:0": {}
 	},
 	"customizations": {
 		"vscode": {
 			"extensions": [
 				"DEVSENSE.phptools-vscode",
-				"GitHub.vscode-github-actions",
-				"Shopify.ruby-extensions-pack"
+				"GitHub.vscode-github-actions"
 			]
 		}
-	},
-	"runArgs": ["--env-file",".devcontainer/.env"]
+	}
 }
