--- a/content/.kamal/config/deploy.yml
+++ b/content/.kamal/config/deploy.yml
@@ -78,8 +78,8 @@ volumes:
 accessories:
   db:
     image: mariadb:10.11.10-jammy
-    host: 103.150.101.64
-    port: 3306
+    roles:
+      - web
     env:
       clear:
         MYSQL_RANDOM_ROOT_PASSWORD: 1
