Add Composer working path setting and update dependencies in devcontainer and composer files

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,7 +16,10 @@
 		"vscode": {
 			"extensions": [
 				"DEVSENSE.phptools-vscode"
-			]
+			],
+			"settings": {
+				"composer.workingPath": "./content"
+			}
 		}
 	}
 }
