--- a/content/composer.json
+++ b/content/composer.json
@@ -41,7 +41,8 @@
     "roots/wp-config": "1.0.0",
     "roots/wp-password-bcrypt": "1.2.0",
     "wpackagist-plugin/wp-graphql": "^1.30",
-    "wpackagist-plugin/wordpress-importer": "^0.8.3"
+    "wpackagist-plugin/wordpress-importer": "^0.8.3",
+    "wpackagist-plugin/wp-all-import":"3.8.0"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
