--- a/content/composer.json
+++ b/content/composer.json
@@ -42,7 +42,8 @@
     "roots/wp-password-bcrypt": "1.2.0",
     "wpackagist-plugin/wp-graphql": "^1.30",
     "wpackagist-plugin/wordpress-importer": "^0.8.3",
-    "wpackagist-plugin/wp-migrate-db": "^2.7"
+    "wpackagist-plugin/advanced-custom-fields": "^6.3",
+    "wpackagist-plugin/wpgraphql-acf": "^2.4"
   },
   "require-dev": {
     "roave/security-advisories": "dev-latest",
