--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,10 @@
 services:
+  web:
+    container_name: web
+    build: web
+    ports:
+      - 4321:4321
+
   content:
     container_name: content
     build: content
