--- a/web/package.json
+++ b/web/package.json
@@ -12,10 +12,16 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "5.5.5"
+    "@astrojs/node": "^9.1.3",
+    "astro": "5.5.5",
+    "express": "^5.1.0",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@astrojs/check": "0.9.4",
+    "@types/bun": "^1.2.8",
+    "@types/express": "^5.0.1",
+    "@types/morgan": "^1.9.9",
     "concurrently": "9.1.2",
     "prettier": "3.5.3",
     "prettier-config-standard": "7.0.0",
